--- a/Slate/src/popouts/_emojipicker.scss
+++ b/Slate/src/popouts/_emojipicker.scss
@@ -15,7 +15,6 @@
     background: var(--background);
     border: 1px solid var(--base-border);
     border-radius: var(--border-radius);
-    box-shadow:var(--elevation-1);
   }
   .contentWrapper-SvZHNd {
     grid-gap: 0;
@@ -397,6 +396,5 @@
     background:var(--background);
     border:1px solid var(--base-border);
     border-radius:var(--border-radius);
-    box-shadow:var(--elevation-1);
   }
 }
